--- a/sass/index.scss
+++ b/sass/index.scss
@@ -140,7 +140,7 @@ ul {
   .image-container {
     display: block;
     .big-image {
-      background-image: url("slike/hrana1.png");
+      background-image: url("../slike/hrana1.png");
       background-repeat: no-repeat;
       width: 100%;
       height: 80%;
