--- a/sass/index.scss
+++ b/sass/index.scss
@@ -140,7 +140,7 @@ ul {
   .image-container {
     display: block;
     .big-image {
-      background-image: url("../slike/hrana1.png");
+      background-image: url("../slike/hrana1.jpg");
       background-repeat: no-repeat;
       width: 100%;
       height: 80%;
@@ -222,7 +222,7 @@ ul {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: 120vh;
 }
 .trecina-prva {
   flex: 1;
@@ -281,7 +281,7 @@ ul {
   margin-top: 0;
   .small-images-f {
     display: flex;
-    margin-bottom: 150px;
+    margin-bottom: 100px;
   }
   .container-overpicture-text {
     width: 250px;
@@ -346,8 +346,7 @@ ul {
   display: flex;
   width: 100%;
   height: 70vh;
-  background-image: url("slike/parallax.jpg");
-  background-color: $background-color_4;
+  background-image: url("../slike/parallax.jpg");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -436,5 +435,469 @@ ul {
   i {
     flex: 1;
     text-align: center;
+  }
+}
+$color_1: #fff;
+$color_2: #ffffff;
+$color_3: gray;
+$color_4: white;
+$color_5: lightgray;
+$color_6: #b50014;
+$font-family_1: "Roboto", sans-serif;
+$background-color_1: #b50014;
+$background-color_2: #000000;
+$background-color_3: rgba(0, 0, 0, 0.5);
+$background-color_4: black;
+$background-color_5: #b50014;
+$background-color_6: ghostwhite;
+$background-color_7: white;
+$background-color_8: rgba(1, 0, 0, 0.5);
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: $font-family_1;
+  box-sizing: border-box;
+}
+nav {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  top: 0;
+  width: 100%;
+  height: 75px;
+  background-color: $background-color_1;
+  justify-content: center;
+  .logo {
+    img {
+      width: 80%;
+    }
+  }
+}
+ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  height: 100%;
+  align-items: center;
+  li {
+    margin-inline: 20px;
+    a {
+      color: $color_1;
+      text-decoration: none;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+    }
+  }
+}
+.first-page {
+  background: url("/slike/Pozadina1.png") lightgray 50% / cover no-repeat;
+  height: calc(100vh - 75px);
+  width: 100%;
+  display: flex;
+  .text-container {
+    background-color: $background-color_3;
+    width: 500px;
+    height: 250px;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 40px 40px 40px 200px;
+    h1 {
+      color: $color_2;
+    }
+    p {
+      color: $color_3;
+      margin-top: 12px;
+    }
+  }
+}
+.nav-underline {
+  background-color: $background-color_2;
+  p {
+    color: $color_2;
+    text-align: right;
+    padding-inline: 160px;
+  }
+}
+.second-page {
+  padding-bottom: 100px;
+  padding-top: 100px;
+  width: 100%;
+  height: 700px;
+  background-color: $background-color_4;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.second-page-child {
+  color: $color_4;
+  height: 100%;
+  width: 50%;
+}
+.second-page-child.text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.second-page-text-container {
+  flex-direction: column;
+  width: 70%;
+  p {
+    color: $color_5;
+    margin-bottom: 8px;
+  }
+  h1 {
+    margin-bottom: 5px;
+  }
+  h2 {
+    margin-bottom: 15px;
+  }
+}
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 50px;
+  margin-top: 60px;
+  a {
+    text-decoration: none;
+    border-radius: 24px;
+    border: 1px solid white;
+    background-color: $background-color_5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+    height: 50px;
+    color: $color_2;
+    transition: 300ms background-color ease-in-out, 300ms color ease-in-out,
+      300ms border ease-in-out, 300ms font-size ease-in-out;
+    &:hover {
+      background-color: $background-color_6;
+      color: $color_6;
+      border: 1px solid #cc061c;
+      font-size: 20px;
+    }
+  }
+}
+.second-page-images {
+  width: 65%;
+  height: 100%;
+  display: block;
+}
+.big-image {
+  height: 66.6%;
+  background: url("slike/hrana1.png") no-repeat;
+}
+.small-images-container {
+  display: flex;
+  img {
+    width: 33.3%;
+  }
+}
+.third-page {
+  display: flex;
+  width: 100%;
+  height: 60vh;
+}
+.left-half {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $background-color_1;
+  ul {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: start;
+  }
+  .text-container {
+    h2 {
+      font-size: 32px;
+      color: $color_2;
+      margin-bottom: 15px;
+    }
+    ul {
+      li {
+        color: $color_2;
+        list-style-type: disc;
+        text-align: left;
+        margin-bottom: 12px;
+      }
+    }
+    .button-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-left: 15px;
+      margin-top: 50px;
+      width: 200%;
+      a {
+        text-decoration: none;
+        border-radius: 24px;
+        border: 1px solid #b50014;
+        background-color: $background-color_7;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 45%;
+        height: 50px;
+        color: $color_6;
+        transition: 300ms background-color ease-in-out, 300ms color ease-in-out,
+          300ms border ease-in-out, 300ms font-size ease-in-out;
+        &:hover {
+          background-color: $background-color_5;
+          color: $color_4;
+          border: 1px solid white;
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+.right-half {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+.forth-page {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 120vh;
+}
+.trecina-prva {
+  flex: 1;
+  background-color: $background-color_4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: $color_4;
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  .text-container {
+    width: 50%;
+    height: 50px;
+    text-align: center;
+  }
+  h2 {
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  h3 {
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 20px;
+  }
+  p {
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+.line {
+  border: none;
+  border-bottom: 1px solid gray;
+  width: 50%;
+  padding-top: 300px;
+}
+.image-container {
+  position: relative;
+}
+.centered-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -45%);
+}
+.trecina-druga {
+  background-color: $background-color_4;
+  height: auto;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
+  .small-images-f {
+    display: flex;
+    margin-bottom: 100px;
+  }
+  .container-overpicture-text {
+    width: 250px;
+    height: 250px;
+    background-image: url("slike/hrana2.jpg");
+    background-size: cover;
+    display: flex;
+    color: $color_4;
+    margin-right: 20px;
+    &:hover {
+      zoom: 110%;
+    }
+    .text {
+      width: 100%;
+      height: 10%;
+      text-align: center;
+      margin-top: auto;
+      margin-bottom: auto;
+      align-items: center;
+      justify-content: center;
+      background-color: $background-color_8;
+    }
+  }
+}
+.fifth-page {
+  display: flex;
+  width: 100%;
+  height: 60vh;
+  .left-half {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    text-align: center;
+    .text-container {
+      width: 100%;
+      text-align: left;
+      padding-left: 200px;
+      padding-right: 200px;
+      h2 {
+        width: auto;
+        font-size: 32px;
+        color: $color_2;
+        padding-bottom: 10px;
+      }
+      h3 {
+        font-size: 20px;
+        color: $color_2;
+      }
+      h4 {
+        padding-bottom: 30px;
+        font-size: 20px;
+        color: $color_2;
+      }
+      p {
+        font-size: 15px;
+        color: $color_2;
+        padding-bottom: 10px;
+      }
+    }
+  }
+}
+.sixth-page {
+  display: flex;
+  width: 100%;
+  height: 70vh;
+  background-image: url("../slike/parallax.jpg");
+  background-color: $background-color_4;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  .text-container {
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 160px;
+    h2 {
+      font-size: 45px;
+      color: $color_6;
+      padding-bottom: 30px;
+    }
+    .button-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 10px;
+      padding-left: 500px;
+      padding-right: 500px;
+      width: 100%;
+      a {
+        text-decoration: none;
+        border-radius: 24px;
+        border: 1px solid #b50014;
+        background-color: $background-color_7;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 45%;
+        height: 50px;
+        color: $color_6;
+        transition: 300ms background-color ease-in-out, 300ms color ease-in-out,
+          300ms border ease-in-out, 300ms font-size ease-in-out;
+        &:hover {
+          background-color: $background-color_5;
+          color: $color_4;
+          border: 1px solid white;
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+.footer {
+  background-color: $background-color_5;
+  width: 100%;
+  height: 110px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.footer-child {
+  height: 100%;
+  width: 40%;
+}
+.contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $color_4;
+}
+.contact-container {
+  margin: auto;
+  height: 90px;
+  width: 300px;
+  display: block;
+}
+.moved {
+  padding-left: 11px;
+}
+.logo {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 20%;
+  img {
+    height: 100%;
+  }
+}
+.social {
+  color: $color_2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  p {
+    a {
+      text-decoration: none;
+      color: $color_2;
+      margin-inline: 5px;
+      i {
+        font-size: 30px;
+      }
+    }
   }
 }
