--- a/sass/third_page.scss
+++ b/sass/third_page.scss
@@ -85,7 +85,7 @@ $background-color_1: #b50014;
     width: 100%;
     height: 40%;
   }
-  .right-half-img-cont {
+  .right-half img {
     width: 100%;
     height: 100%;
   }
