--- a/css/nav.css
+++ b/css/nav.css
@@ -1,4 +1,3 @@
-/* MOBILNI UREDJAJI */
 nav {
   z-index: 10;
   position: absolute;
@@ -19,7 +18,7 @@ nav {
     background-color: #b50014;
     justify-content: center;
   }
-  nav .logo img {
+  nav .icon img {
     width: 80%;
   }
   ul {
@@ -92,6 +91,7 @@ nav {
     align-items: center;
   }
 }
+/* MOBILNI UREDJAJI */
 @media (max-width: 1100px) {
   nav {
     display: flex;
@@ -102,8 +102,8 @@ nav {
     height: 75px;
     background-color: #b50014;
   }
-  nav .logo img {
-    width: 40%;
+  nav .icon img {
+    width: 60%;
   }
   .toggle-nav {
     display: flex;
@@ -128,9 +128,19 @@ nav {
     background-color: rgba(0, 0, 0, 0.5);
     transform: translateX(100%);
   }
+  ul.active {
+    transform: translateX(0);
+  }
+  .nav-divider {
+    display: flex;
+    flex-direction: column;
+  }
   ul li {
     width: 100%;
     height: 50px;
+  }
+  ul .nav-divider:first-child {
+    margin-top: 60px;
   }
   ul li a {
     text-decoration: none;
@@ -141,16 +151,6 @@ nav {
   }
   ul li a:focus {
     color: #b50014;
-  }
-  ul .nav-divider:first-child {
-    margin-top: 60px;
-  }
-  ul.active {
-    transform: translateX(0);
-  }
-  .nav-divider {
-    display: flex;
-    flex-direction: column;
   }
   .nav-underline {
     display: flex;
