--- a/sass/third_page.scss
+++ b/sass/third_page.scss
@@ -1,69 +1,69 @@
-$color_1: #ffffff;
-$color_2: white;
-$background-color_1: #b50014;
-
 .third-page {
   display: flex;
   width: 100%;
   height: 60vh;
 }
+
 .left-half {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $background-color_1;
-  ul {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: start;
-  }
-  .text-container {
-    h2 {
-      font-size: 32px;
-      color: $color_1;
-      margin-bottom: 15px;
-    }
-    ul {
-      li {
-        color: $color_1;
-        list-style-type: disc;
-        text-align: left;
-        margin-bottom: 12px;
-      }
-    }
-    .button-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding-left: 15px;
-      margin-top: 50px;
-      width: 100%;
-      a {
-        &:hover {
-          background-color: $background-color_1;
-          color: $color_2;
-          border: 1px solid white;
-          font-size: 20px;
-        }
-      }
-    }
-  }
+  background-color: #b50014;
 }
+
+.left-half ul {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: start;
+}
+
+.left-half .text-container h2 {
+  font-size: 32px;
+  color: #ffffff;
+  margin-bottom: 15px;
+}
+
+.left-half .text-container ul li {
+  color: #ffffff;
+  list-style-type: disc;
+  text-align: left;
+  margin-bottom: 12px;
+}
+
+.left-half .text-container .button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  width: 100%;
+}
+
+.left-half .text-container .button-container a:hover {
+  background-color: #b50014;
+  color: white;
+  border: 1px solid white;
+  font-size: 20px;
+}
+
 .right-half {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  .right-half-img-cont {
-    height: 100%;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
 }
+
+.right-half .right-half-img-cont {
+  height: 100%;
+}
+
+.right-half .right-half-img-cont img {
+  width: 100%;
+  height: 100%;
+}
+
+/* MOBILE RESPONSIVE */
 @media (max-width: 1100px) {
   .third-page {
     display: block;
@@ -73,20 +73,177 @@ $background-color_1: #b50014;
     width: 100%;
     height: 800px;
   }
+
   .left-half {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $background-color_1;
+    background-color: #b50014;
     width: 100%;
     height: 60%;
   }
+  .left-half .text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .left-half .text-container h2:nth-child(1) {
+    margin: 30px 0 0;
+  }
+  .left-half .text-container h2:nth-child(2) {
+    margin: 0 0 30px;
+  }
+  .left-half-spans {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    color: white;
+  }
+
+  .left-half-spans span {
+    text-align: center;
+    width: 100%;
+    margin-bottom: 20px;
+    font-weight: 300;
+  }
+  .left-half-spans span::before {
+    content: "•";
+    margin-right: 8px;
+  }
+
+  .left-half .button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 30px;
+  }
+  .left-half .text-container .button-container a {
+    text-decoration: none;
+    border-radius: 24px;
+    border: 1px solid #b50014;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    color: #b50014;
+    transition: 300ms background-color ease-in-out, 300ms color ease-in-out,
+      300ms border ease-in-out, 300ms font-size ease-in-out;
+  }
+
+  .left-half .text-container .button-container a:hover {
+    background-color: #b50014;
+    color: white;
+    border: 1px solid white;
+    font-size: 20px;
+  }
+
   .right-half {
     width: 100%;
     height: 40%;
   }
+
   .right-half img {
     width: 100%;
     height: 100%;
   }
 }
+/* ------ END MOBILE RESPONSIVE ------ */
+
+/* DESKTOP RESPONSIVE */
+@media (min-width: 1100px) {
+  .third-page {
+    display: flex;
+    width: 100%;
+    height: 80vh;
+  }
+
+  .left-half {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #b50014;
+  }
+  .left-half .text-container {
+    height: 60%;
+    margin-bottom: 30px;
+    margin-top: -30px;
+  }
+  .left-half .text-container h2:nth-child(1) {
+    margin: 30px 0 0;
+  }
+  .left-half .text-container h2:nth-child(2) {
+    margin: 0 0 30px;
+  }
+
+  .left-half-spans {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    width: 60%;
+    color: white;
+  }
+
+  .left-half-spans span {
+    text-align: left;
+    width: 200%;
+    margin-bottom: 20px;
+    font-weight: 300;
+  }
+  .left-half-spans span::before {
+    content: "•";
+    margin-right: 8px;
+  }
+
+  .left-half .text-container .button-container {
+    display: flex;
+    justify-content: left;
+    align-items: start;
+    margin-top: 50px;
+    width: 100%;
+  }
+
+  .left-half .text-container .button-container a {
+    text-decoration: none;
+    border-radius: 24px;
+    border: 1px solid #b50014;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 65%;
+    height: 50px;
+    color: #b50014;
+    transition: 300ms background-color ease-in-out, 300ms color ease-in-out,
+      300ms border ease-in-out, 300ms font-size ease-in-out;
+  }
+
+  .left-half .text-container .button-container a:hover {
+    background-color: #b50014;
+    color: white;
+    border: 1px solid white;
+    font-size: 20px;
+  }
+
+  .right-half {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .right-half img {
+    width: 100%;
+    height: 100%;
+  }
+}
+/* ------ END DESKTOP RESPONSIVE ------ */
