--- a/praksa/src/Header.css
+++ b/praksa/src/Header.css
@@ -1,4 +1,3 @@
-/* MOBILNI UREDJAJI */
 nav {
   z-index: 10;
   position: absolute;
@@ -19,6 +18,10 @@ nav {
     background-color: #b50014;
     justify-content: center;
   }
+  .nav-divider {
+    flex-direction: row;
+    width: fit-content;
+  }
   nav .icon img {
     width: 80%;
   }
@@ -28,6 +31,9 @@ nav {
     list-style: none;
     height: 100%;
     align-items: center;
+  }
+  ul li {
+    margin-right: 12px;
   }
   ul li a {
     font-size: 13px !important;
@@ -57,10 +63,9 @@ nav {
   .nav-time {
     display: flex;
     flex-direction: row;
-    margin-left: 53%;
+    margin-left: 50.5%;
     color: white;
     width: fit-content;
-    margin-right: 1.5%;
   }
   .nav-time span i {
     margin-right: 5px;
@@ -74,21 +79,16 @@ nav {
   ul li {
     margin-right: 20px;
   }
-}
-@media (min-width: 1000px) and (max-width: 1100px) {
-  ul li {
-    margin-right: -3px;
-  }
   .nav-time {
     display: flex;
     flex-direction: row;
     margin-left: 52%;
     color: white;
     width: fit-content;
-    margin-right: 0.5%;
   }
 }
-@media (min-width: 1000px) and (max-width: 1299px) {
+
+@media (min-width: 1100px) and (max-width: 1299px) {
   .nav-divider {
     flex-direction: row;
     width: fit-content;
@@ -102,17 +102,16 @@ nav {
   .nav-time {
     display: flex;
     flex-direction: row;
-    margin-left: 51%;
+    margin-left: 55%;
     color: white;
     width: fit-content;
-    margin-right: 1.5%;
   }
   ul li {
     width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: -10px;
+    margin-right: 2px !important;
   }
 }
 @media (max-width: 1000px) {
