--- a/praksa/src/SectionFour.css
+++ b/praksa/src/SectionFour.css
@@ -21,6 +21,7 @@
   height: 100%;
   text-align: center;
   justify-content: center;
+  align-items: center;
 }
 .trecina-prva h2 {
   margin: 0;
@@ -47,18 +48,20 @@
   line-height: 24px;
 }
 .trecina-prva .button-container {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 10px;
 }
 .trecina-prva .button-container a {
-  width: 174px;
-  height: 47px;
+  width: 45%;
+  height: 50px;
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
   margin-top: 20px;
+  text-align: center;
 }
 
 .line {
@@ -166,5 +169,12 @@
     display: flex;
     color: white;
     margin: 4px;
+  }
+  .trecina-prva .text-container {
+    width: 65%;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
   }
 }
