--- a/praksa/src/SectionOne/Section_one.css
+++ b/praksa/src/SectionOne/Section_one.css
@@ -40,7 +40,7 @@ a {
 .first-page .swiper .swiper-wrapper .swiper-slide {
   width: 100%;
   height: 100%;
-  background-image: url("assets/image14.jpg");
+  background-image: url("../assets/image14.jpg");
   background-size: cover;
   background-position: center;
   display: flex;
