--- a/praksa/src/SectionSix/SectionSix.css
+++ b/praksa/src/SectionSix/SectionSix.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
   height: 55vh;
-  background-image: url("./assets/parallax.jpg");
+  background-image: url("../assets/parallax.jpg");
   background-color: black;
   background-attachment: fixed;
   background-position: center;
