--- a/praksa/src/SectionFour/SectionFour.css
+++ b/praksa/src/SectionFour/SectionFour.css
@@ -47,21 +47,15 @@
   font-weight: 300;
   line-height: 24px;
 }
+.trecina-prva p:nth-child(5) {
+  margin-bottom: 40px;
+}
 .trecina-prva .button-container {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 10px;
-}
-.trecina-prva .button-container a {
-  width: 20%;
-  height: 50px;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 22px;
-  margin-top: 20px;
-  text-align: center;
 }
 
 .line {
