--- a/praksa/src/Footer/Footer.css
+++ b/praksa/src/Footer/Footer.css
@@ -6,6 +6,7 @@
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
+  height: 100%;
 }
 .footer .footer-child {
   height: 100%;
