--- a/praksa/src/Header/Header.css
+++ b/praksa/src/Header/Header.css
@@ -1,3 +1,5 @@
+@import "../Theme/light_dark.css";
+
 nav {
   z-index: 10;
   position: absolute;
@@ -8,9 +10,9 @@ nav {
 }
 .nav-underline-header {
   background-color: #000000;
+  color: #ffffff;
 }
 .nav-underline-header p {
-  color: #ffffff;
   text-align: right;
   padding-inline: 160px;
 }
@@ -68,11 +70,20 @@ nav {
   .nav-underline {
     display: flex;
   }
-  .nav-time {
+  .under-nav {
     display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .under-nav .nav-time {
     flex-direction: row;
-    margin-left: 50.5%;
-    color: white;
+    width: fit-content;
+    align-items: center;
+    height: 30px;
+    padding-left: 270px;
+  }
+  .nav-time span {
     width: fit-content;
   }
   .nav-time span i {
@@ -84,15 +95,21 @@ nav {
     flex-direction: row;
     width: fit-content;
   }
+  .under-nav {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .under-nav .nav-time {
+    flex-direction: row;
+    width: fit-content;
+    align-items: center;
+    height: 30px;
+    padding-left: 330px;
+  }
   ul li {
     margin-right: 20px;
-  }
-  .nav-time {
-    display: flex;
-    flex-direction: row;
-    margin-left: 52%;
-    color: white;
-    width: fit-content;
   }
 }
 
@@ -107,12 +124,19 @@ nav {
     align-items: start;
     margin: 0;
   }
-  .nav-time {
+
+  .under-nav {
     display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .under-nav .nav-time {
     flex-direction: row;
-    margin-left: 55%;
-    color: white;
     width: fit-content;
+    align-items: center;
+    height: 30px;
+    padding-left: 400px;
   }
   ul li {
     width: 100px;
@@ -185,13 +209,18 @@ nav {
   .nav-underline {
     display: flex;
   }
+  .under-nav {
+    display: flex;
+    justify-content: flex-end;
+    text-align: right;
+  }
   .nav-time {
+    align-items: end;
     display: flex;
     flex-direction: column;
     margin-left: auto;
-    color: white;
     width: fit-content;
-    margin-right: 15px;
+    margin-right: 7px;
     margin-top: 75px;
   }
   .nav-time span {
