--- a/praksa/src/SectionTwo/SectionTwo.css
+++ b/praksa/src/SectionTwo/SectionTwo.css
@@ -8,10 +8,10 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  color: white;
 }
 
 .second-page-child {
-  color: white;
   height: 100%;
   width: 50%;
 }
@@ -28,7 +28,7 @@
   width: 70%;
 }
 .second-page-text-container p {
-  color: lightgray;
+  opacity: 0.7;
   margin-bottom: 8px;
   font-size: 16px;
 }
@@ -87,12 +87,12 @@
     justify-content: space-between;
     height: 100%;
     padding: 16px;
+    color: white;
   }
   .second-page-child {
     display: flex;
     justify-content: center;
     align-content: center;
-    color: white;
     height: 100%;
     width: 80%;
   }
